Improve mobile support, clone image

--- a/index.html
+++ b/index.html
@@ -418,8 +418,8 @@
                 </div>
             </div>
             <div class="column">
-                <div class="canvas-column content">
-                    <div class="level" style="margin-bottom: 0">
+                <div class="canvas-column">
+                    <div class="level content" style="margin-bottom: 0">
                         <div class="level-left">
                             <h1>Your Schedule</h1>
                         </div>
@@ -473,7 +473,8 @@
                         </div>
                     </div>
 
-                    <canvas id="canvas" width="2550" height="3300" />
+                    <img id="canvas-clone" alt-text="Your Schedule" />
+                    <canvas id="canvas" width="2550" height="3300"></canvas>
                 </div>
             </div>
         </div>
