Fix room number & add help text

--- a/index.html
+++ b/index.html
@@ -475,6 +475,12 @@
 
                     <img id="canvas-clone" alt-text="Your Schedule" />
                     <canvas id="canvas" width="2550" height="3300"></canvas>
+
+                    <p class="is-size-7 is-italic">
+                        If you're using a phone, the save buttons might not
+                        work, so you can either take a screenshot or tap and
+                        hold on the schedule to save it.
+                    </p>
                 </div>
             </div>
         </div>
