Lion/Tiger block settings card

--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@
                     </div>
                     <div class="card block Lion class-card is-closed">
                         <header class="card-header">
-                            <p class="card-header-title">Lion</p>
+                            <p class="card-header-title lion-tiger-block-title">Lion</p>
                             <button
                                 class="card-header-icon"
                                 aria-label="more options"
