Fix and add colors

--- a/index.html
+++ b/index.html
@@ -260,8 +260,9 @@
                                             </option>
                                             <option value="12">Rose</option>
                                             <option value="13">Teal</option>
-                                            <option value="14">Indigo</option>
+                                            <option value="14">Lavender</option>
                                             <option value="15">Cream</option>
+                                            <option value="16">Grey</option>
                                         </select>
                                     </div>
                                 </div>
@@ -317,8 +318,9 @@
                                             </option>
                                             <option value="12">Rose</option>
                                             <option value="13">Teal</option>
-                                            <option value="14">Indigo</option>
+                                            <option value="14">Lavender</option>
                                             <option value="15">Cream</option>
+                                            <option value="16">Grey</option>
                                         </select>
                                     </div>
                                 </div>
@@ -362,8 +364,9 @@
                                             </option>
                                             <option value="12">Rose</option>
                                             <option value="13">Teal</option>
-                                            <option value="14">Indigo</option>
+                                            <option value="14">Lavender</option>
                                             <option value="15">Cream</option>
+                                            <option value="16">Grey</option>
                                         </select>
                                     </div>
                                 </div>
@@ -372,7 +375,9 @@
                     </div>
                     <div class="card block Lion class-card is-closed">
                         <header class="card-header">
-                            <p class="card-header-title lion-tiger-block-title">Lion</p>
+                            <p class="card-header-title lion-tiger-block-title">
+                                Lion
+                            </p>
                             <button
                                 class="card-header-icon"
                                 aria-label="more options"
@@ -407,8 +412,9 @@
                                             </option>
                                             <option value="12">Rose</option>
                                             <option value="13">Teal</option>
-                                            <option value="14">Indigo</option>
+                                            <option value="14">Lavender</option>
                                             <option value="15">Cream</option>
+                                            <option value="16">Grey</option>
                                         </select>
                                     </div>
                                 </div>
