--- a/index.html
+++ b/index.html
@@ -253,8 +253,10 @@
                                             <option value="6">Indigo</option>
                                             <option value="7">Purple</option>
                                             <option value="8">Pink</option>
-                                            <option value="9">Green 2</option>
-                                            <option value="10">Orange 2</option>
+                                            <option value="9">
+                                                Seafoam Green
+                                            </option>
+                                            <option value="10">Pumpkin</option>
                                             <option value="11">
                                                 Yellow-Green
                                             </option>
@@ -311,8 +313,10 @@
                                             <option value="6">Indigo</option>
                                             <option value="7">Purple</option>
                                             <option value="8">Pink</option>
-                                            <option value="9">Green 2</option>
-                                            <option value="10">Orange 2</option>
+                                            <option value="9">
+                                                Seafoam Green
+                                            </option>
+                                            <option value="10">Pumpkin</option>
                                             <option value="11">
                                                 Yellow-Green
                                             </option>
@@ -357,8 +361,10 @@
                                             <option value="6">Indigo</option>
                                             <option value="7">Purple</option>
                                             <option value="8">Pink</option>
-                                            <option value="9">Green 2</option>
-                                            <option value="10">Orange 2</option>
+                                            <option value="9">
+                                                Seafoam Green
+                                            </option>
+                                            <option value="10">Pumpkin</option>
                                             <option value="11">
                                                 Yellow-Green
                                             </option>
@@ -405,8 +411,10 @@
                                             <option value="6">Indigo</option>
                                             <option value="7">Purple</option>
                                             <option value="8">Pink</option>
-                                            <option value="9">Green 2</option>
-                                            <option value="10">Orange 2</option>
+                                            <option value="9">
+                                                Seafoam Green
+                                            </option>
+                                            <option value="10">Pumpkin</option>
                                             <option value="11">
                                                 Yellow-Green
                                             </option>
