--- a/index.html
+++ b/index.html
@@ -126,6 +126,28 @@
                             />
                         </div>
                     </div>
+
+                    <label class="label">Affirmation</label>
+                    <div class="field has-addons">
+                        <div class="control is-expanded">
+                            <input
+                                class="input affirmation"
+                                type="text"
+                                placeholder="You are beautiful."
+                                value=""
+                            />
+                        </div>
+                        <div class="control">
+                            <button
+                                class="button is-link new-affirmation"
+                                alt-text="Give me a new affirmation!"
+                            >
+                                <span class="icon is-large">
+                                    <ion-icon name="refresh"></ion-icon>
+                                </span>
+                            </button>
+                        </div>
+                    </div>
                     <div class="field">
                         <label class="checkbox">
                             <input type="checkbox" class="use24h" />
