--- a/index.html
+++ b/index.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="light">
     <head>
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>NSHS Schedule</title>
+        <title>NSHS/NNHS Schedule</title>
 
         <meta
             name="description"
-            content="A tool to keep track of the new NSHS schedule and help you manage your Zoom links."
+            content="Make a beautiful version of your NSHS/NNHS schedule!"
         />
 
         <meta content="NSHS Schedule" property="og:title" />
 
         <meta
-            content="A tool to keep track of the new NSHS schedule and help you manage your Zoom links."
+            content="Make a beautiful version of your NSHS/NNHS schedule!"
             property="og:description"
         />
 
@@ -25,51 +25,54 @@
             property="og:image"
         />
 
-        <!-- Global site tag (gtag.js) - Google Analytics -->
-        <script
-            async
-            src="https://www.googletagmanager.com/gtag/js?id=G-PZ6NG4L1X7"
-        ></script>
+        <!-- Google Tag Manager -->
         <script>
-            window.dataLayer = window.dataLayer || [];
-            function gtag() {
-                dataLayer.push(arguments);
-            }
-            gtag('js', new Date());
-
-            gtag('config', 'G-PZ6NG4L1X7');
+            (function (w, d, s, l, i) {
+                w[l] = w[l] || [];
+                w[l].push({
+                    'gtm.start': new Date().getTime(),
+                    'event': 'gtm.js',
+                });
+                var f = d.getElementsByTagName(s)[0],
+                    j = d.createElement(s),
+                    dl = l != 'dataLayer' ? '&l=' + l : '';
+                j.async = true;
+                j.src = 'https://www.googletagmanager.com/gtm.js?id=' + i + dl;
+                f.parentNode.insertBefore(j, f);
+            })(window, document, 'script', 'dataLayer', 'GTM-NXXPVDSN');
         </script>
+        <!-- End Google Tag Manager -->
 
         <link
             rel="apple-touch-icon"
             sizes="180x180"
-            href="favicons/apple-touch-icon.png?v=Gv6KgplRy5"
+            href="favicons/apple-touch-icon.png?v=refresh2"
         />
         <link
             rel="icon"
             type="image/png"
             sizes="32x32"
-            href="favicons/favicon-32x32.png?v=Gv6KgplRy5"
+            href="favicons/favicon-32x32.png?v=refresh2"
         />
         <link
             rel="icon"
             type="image/png"
             sizes="16x16"
-            href="favicons/favicon-16x16.png?v=Gv6KgplRy5"
+            href="favicons/favicon-16x16.png?v=refresh2"
         />
-        <link rel="manifest" href="favicons/site.webmanifest?v=Gv6KgplRy5" />
+        <link rel="manifest" href="favicons/site.webmanifest?v=refresh2" />
         <link
             rel="mask-icon"
-            href="favicons/safari-pinned-tab.svg?v=Gv6KgplRy5"
-            color="#2a9fd6"
+            href="favicons/safari-pinned-tab.svg?v=refresh2"
+            color="#4259ff"
         />
-        <link rel="shortcut icon" href="favicons/favicon.ico?v=Gv6KgplRy5" />
-        <meta name="msapplication-TileColor" content="#2a9fd6" />
+        <link rel="shortcut icon" href="favicons/favicon.ico?v=refresh2" />
+        <meta name="msapplication-TileColor" content="#4259ff" />
         <meta
             name="msapplication-config"
-            content="favicons/browserconfig.xml?v=Gv6KgplRy5"
+            content="favicons/browserconfig.xml?v=refresh2"
         />
-        <meta name="theme-color" content="#2a9fd6" />
+        <meta name="theme-color" content="#4259ff" />
 
         <link rel="stylesheet" href="index.css" />
 
@@ -77,21 +80,32 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link
             rel="stylesheet"
-            href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css"
+            href="https://cdn.jsdelivr.net/npm/bulma@1.0.2/css/bulma.min.css"
         />
         <link
-            href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap"
+            href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700"
             rel="stylesheet"
             crossorigin="anonymous"
         />
     </head>
     <body>
+        <!-- Google Tag Manager (noscript) -->
+        <noscript
+            ><iframe
+                src="https://www.googletagmanager.com/ns.html?id=GTM-NXXPVDSN"
+                height="0"
+                width="0"
+                style="display: none; visibility: hidden"
+            ></iframe
+        ></noscript>
+        <!-- End Google Tag Manager (noscript) -->
+
         <section class="hero is-link is-bold block">
             <div class="hero-body">
                 <div class="container">
-                    <p class="title">NSHS Schedule</p>
+                    <p class="title">NSHS/NNHS Schedule Maker</p>
                     <p class="subtitle">
-                        2021-2022 School Year Schedule Generator Tool
+                        Proudly serving the Newton high schools since 2020!
                     </p>
                 </div>
             </div>
@@ -99,21 +113,26 @@
         <div class="columns main">
             <div class="column">
                 <div class="content">
-                    <h3>Hi!</h3>
+                    <h3>Hello!</h3>
                     <p>
-                        This is a little tool to make a pretty looking version
-                        of your schedule that you can save on your phone or
-                        print or whatever you want!
+                        I made this tool a few years ago to make a pretty
+                        version of my schedule! I graduated from South in 2024,
+                        but I hope this site lives on.
+                        <br />
+                        If you like it, please share
+                        <strong>nshs.site</strong> with your friends!
                     </p>
                     <p>
-                        Click on each of the cards to put in your classes and
-                        your schedule will show up on the right (or at the
-                        bottom if you're using a phone). That's it! Let me know
-                        if you have any questions!
+                        Have a great day!<em>
+                            -
+                            <a id="self-promo" href="https://leahvashevko.com"
+                                >Leah</a
+                            ></em
+                        >
                     </p>
-                    <p>Have a great day!<br /><em> - Leah</em></p>
                 </div>
                 <div class="divider"></div>
+
                 <div class="block">
                     <div class="field">
                         <label class="label">Schedule Title</label>
@@ -127,13 +146,13 @@
                         </div>
                     </div>
 
-                    <label class="label">Affirmation</label>
+                    <label class="label">Subtitle</label>
                     <div class="field has-addons">
                         <div class="control is-expanded">
                             <input
                                 class="input affirmation"
                                 type="text"
-                                placeholder="You are beautiful."
+                                placeholder="Have a great day!"
                                 value=""
                             />
                         </div>
@@ -148,6 +167,19 @@
                             </button>
                         </div>
                     </div>
+
+                    <div class="field">
+                        <label class="checkbox">
+                            <input type="checkbox" class="north" />
+                            <strong
+                                >I go to North (Show me Tiger blocks
+                                instead)</strong
+                            >
+                        </label>
+                    </div>
+
+                    <br />
+
                     <div class="field">
                         <label class="checkbox">
                             <input type="checkbox" class="use24h" />
@@ -157,15 +189,8 @@
 
                     <div class="field">
                         <label class="checkbox">
-                            <input type="checkbox" class="north" />
-                            I go to North (Show me Tiger blocks instead)
-                        </label>
-                    </div>
-
-                    <div class="field">
-                        <label class="checkbox">
                             <input type="checkbox" class="useColors" />
-                            No colored class backgrounds (White schedule)
+                            No colors (black & white)
                         </label>
                     </div>
                 </div>
@@ -217,7 +242,7 @@
                                             <input
                                                 class="input class"
                                                 type="text"
-                                                placeholder="e.g. Chemistry, English"
+                                                placeholder="e.g. Chemistry"
                                                 value=""
                                             />
                                         </div>
@@ -247,11 +272,11 @@
                                         </div>
                                     </div>
 
-                                    <div class="field">
+                                    <div class="field lunchfield">
                                         <label class="label">Lunch</label>
                                         <div class="select">
                                             <select class="lunch">
-                                                <option value="-1">None</option>
+                                                <!-- <option value="-1">None</option> -->
                                                 <option value="3">
                                                     All Lunches
                                                 </option>
@@ -261,33 +286,48 @@
                                             </select>
                                         </div>
                                     </div>
-                                </div>
-                                <div class="field">
-                                    <label class="label">Block Color</label>
-                                    <div class="select">
-                                        <select class="color">
-                                            <option value="0">White</option>
-                                            <option value="1">Red</option>
-                                            <option value="2">Orange</option>
-                                            <option value="3">Yellow</option>
-                                            <option value="4">Green</option>
-                                            <option value="5">Blue</option>
-                                            <option value="6">Indigo</option>
-                                            <option value="7">Purple</option>
-                                            <option value="8">Pink</option>
-                                            <option value="9">
-                                                Seafoam Green
-                                            </option>
-                                            <option value="10">Pumpkin</option>
-                                            <option value="11">
-                                                Yellow-Green
-                                            </option>
-                                            <option value="12">Rose</option>
-                                            <option value="13">Teal</option>
-                                            <option value="14">Lavender</option>
-                                            <option value="15">Cream</option>
-                                            <option value="16">Grey</option>
-                                        </select>
+
+                                    <div class="field">
+                                        <label class="label">Block Color</label>
+                                        <div class="select">
+                                            <select class="color">
+                                                <option value="0">White</option>
+                                                <option value="1">Red</option>
+                                                <option value="2">
+                                                    Orange
+                                                </option>
+                                                <option value="3">
+                                                    Yellow
+                                                </option>
+                                                <option value="4">Green</option>
+                                                <option value="5">Blue</option>
+                                                <option value="6">
+                                                    Indigo
+                                                </option>
+                                                <option value="7">
+                                                    Purple
+                                                </option>
+                                                <option value="8">Pink</option>
+                                                <option value="9">
+                                                    Seafoam Green
+                                                </option>
+                                                <option value="10">
+                                                    Pumpkin
+                                                </option>
+                                                <option value="11">
+                                                    Yellow-Green
+                                                </option>
+                                                <option value="12">Rose</option>
+                                                <option value="13">Teal</option>
+                                                <option value="14">
+                                                    Lavender
+                                                </option>
+                                                <option value="15">
+                                                    Cream
+                                                </option>
+                                                <option value="16">Grey</option>
+                                            </select>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -463,11 +503,7 @@
                             <div class="field has-addons">
                                 <p class="control">
                                     <button
-                                        class="
-                                            button
-                                            is-small is-outlined is-link
-                                            save-button
-                                        "
+                                        class="button is-small is-outlined is-link save-button"
                                     >
                                         <span class="icon">
                                             <ion-icon name="save"></ion-icon>
@@ -477,11 +513,7 @@
                                 </p>
                                 <p class="control">
                                     <button
-                                        class="
-                                            button
-                                            is-small is-outlined is-link
-                                            print-button
-                                        "
+                                        class="button is-small is-outlined is-link print-button"
                                     >
                                         <span class="icon">
                                             <ion-icon name="print"></ion-icon>
@@ -491,11 +523,7 @@
                                 </p>
                                 <p class="control">
                                     <button
-                                        class="
-                                            button
-                                            is-small is-outlined is-link
-                                            share-button
-                                        "
+                                        class="button is-small is-outlined is-link share-button"
                                     >
                                         <span class="icon">
                                             <ion-icon
@@ -528,21 +556,13 @@
                     <a href="https://leah.vashevko.com">Leah Vashevko</a>.
                 </p>
                 <p>
-                    <a href="https://remote.nshs.site"
-                        >See last year's nshs.site</a
-                    >.
-                </p>
-                <p>
                     This website is not affiliated with, endorsed by, or in any
-                    way officially connected with Newton South High School or
-                    the Newton Public Schools.
+                    way officially connected with Newton South/North High School
+                    or the Newton Public Schools.
                 </p>
                 <p>
                     Having issues? Found a bug? Need support? Send me an email
-                    at <a href="mail:leah@vashevko">leah@vashevko.com</a> or
-                    <a href="https://discord.gg/KXxZt2BPUF"
-                        >join the Discord server</a
-                    >.
+                    at <a href="mail:leah@vashevko">leah@vashevko.com</a>.
                 </p>
             </div>
         </footer>
