Saving settings + fix cards bug added with options

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                         </label>
                     </div>
 
-                    <div class="card block WIN class-card is-closed">
+                    <div class="card block options-card class-card is-closed">
                         <header class="card-header">
                             <p class="card-header-title">Options</p>
                             <button
@@ -215,6 +215,15 @@
                                     Show block numbers (ex. A1, A2, A3)
                                 </label>
                             </div>
+
+                            <br />
+
+                            <button
+                                class="button is-outlined is-danger"
+                                id="clear-data"
+                            >
+                                Clear saved schedule data
+                            </button>
                         </div>
                     </div>
                 </div>
@@ -593,9 +602,9 @@
         </footer>
 
         <script src="https://printjs-4de6.kxcdn.com/print.min.js"></script>
-        <script src="settings.js"></script>
         <script src="utils.js"></script>
         <script src="schedule.js"></script>
+        <script src="settings.js"></script>
         <script src="draw.js"></script>
         <script src="cards.js"></script>
         <script src="other.js"></script>
