Added new! label to format

--- a/index.html
+++ b/index.html
@@ -579,7 +579,14 @@
 
                     <div class="content">
                         <div class="field is-fullwidth">
-                            <label class="label">Format</label>
+                            <label class="label"
+                                >Format&ensp;
+                                <span
+                                    class="tag is-info"
+                                    style="position: relative; top: -0.2em"
+                                    >new!</span
+                                ></label
+                            >
                             <p class="control is-fullwidth has-icons-left">
                                 <span class="select is-fullwidth">
                                     <select id="size-format">
