--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             crossorigin="anonymous"
         />
 
-        <link rel="stylesheet" href="index.css" />
+        <link rel="stylesheet" href="index.css?v=refresh1" />
     </head>
     <body>
         <section class="hero is-link is-bold block">
@@ -638,12 +638,12 @@
         </footer>
 
         <script src="https://printjs-4de6.kxcdn.com/print.min.js"></script>
-        <script src="utils.js"></script>
-        <script src="schedule.js"></script>
-        <script src="settings.js"></script>
-        <script src="draw.js"></script>
-        <script src="cards.js"></script>
-        <script src="other.js"></script>
+        <script src="utils.js?v=refresh1"></script>
+        <script src="schedule.js?v=refresh1"></script>
+        <script src="settings.js?v=refresh1"></script>
+        <script src="draw.js?v=refresh1"></script>
+        <script src="cards.js?v=refresh1"></script>
+        <script src="other.js?v=refresh1"></script>
         <script
             type="module"
             src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"
